@@ -1,0 +1,7 @@
+name := "simd-java"
+
+version := "0.1"
+
+scalaVersion := "2.9.1"
+
+libraryDependencies += "junit" % "junit" % "4.8" % "test"
