@@ -1,0 +1,10 @@
+module org { module opensplice { module demo {
+struct ShapeType {
+  string color;
+  long x;
+  long y;
+  long shapesize;
+};
+
+#pragma keylist ShapeType color
+}; }; }; 
