@@ -1,0 +1,12 @@
+module org { module opensplice { module demo {
+      struct PingType
+      {
+	long         number;
+	long         counter;
+	string<32>   vendor;
+      };
+#pragma keylist PingType
+}; }; };
+
+
+
